Small fixes, little bit of spacing under sections

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -160,6 +160,9 @@ a:hover, a:focus {
   }
 }
 
+section {
+  margin-bottom: 50px;
+}
 
 // Code that gets displayed inline
 code {
